Loading text from a file test

--- a/app/views/static/index.html.haml
+++ b/app/views/static/index.html.haml
@@ -32,3 +32,5 @@
             =render partial: 'artist', locals: {artist: 'The Beatles', description: '', uid: 'the_beatles'}
             =render partial: 'artist', locals: {artist: 'Drake', description: '', uid: 'drake'}
             =render partial: 'artist', locals: {artist: 'Other Artists', description: '', uid: 'other_artist'}
+  .row
+    =@res
