Using Montserrat font Added particles.js and a loading animation for a loading section

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,8 @@
  *= require_tree .
  *= require_self
  */
+@import 'https://fonts.googleapis.com/css?family=Montserrat:400,700';
+
+html, body {
+  font-family: 'Montserrat', sans-serif;
+}
