--- a/app/views/application/_artist.html.haml
+++ b/app/views/application/_artist.html.haml
@@ -1,7 +1,6 @@
 .artist-tile
-  -# %a{data: {'artist': ""}}
-  -#   %span.play GO
-  -#   .overlay
+  %a{data: {'artist': ""}}
+    %span.play GO
   =image_tag(uid+'.png', class: 'img-responsive')
   %h2=artist
   %p Some string about the artist here
