--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -13,11 +13,42 @@
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#673ab7', endColorstr='#8065b2',GradientType=0 ); /* IE6-9 */
 }
 
+.loading-section {
+  // display: none;
+}
+
+.lyrics-section {
+  display: none;
+}
+
+.loader-badge {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-left:-75px;
+  margin-top:-75px;
+  background-color: #673ab7;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  .icon {
+    position: absolute;
+    top: 42px;
+    left: 36px;
+    width: 80px;
+  }
+}
+
 .logo {
   position: absolute;
   top: 20px;
   left: 20px;
-  width: 50px;
+  width: 200px;
+  font-size: 20pt;
+
+  img {
+    width: 60px;
+  }
 }
 
 .title {
@@ -53,6 +84,7 @@
   display: inline-block;
   padding: 25px;
   background: rgba(255, 255, 255, 0.15);
+  cursor: pointer;
 
   img {
     margin: 0 auto;
@@ -65,6 +97,17 @@
   -o-transition: -o-transform .3s ease-out;
   transition: transform .3s ease-out;
   transform: scale(1);
+}
+
+.artist-tile a {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  margin: -5px -30px;
+}
+
+.artist-tile a:hover {
+  background-color: rgba(0,0,0,0.3);
 }
 
 .slick-center {
