--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,6 +5,7 @@
     =stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
     =javascript_include_tag 'application', 'data-turbolinks-track' => true
     =javascript_include_tag '//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js'
+    =javascript_include_tag '//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js'
     = csrf_meta_tags
   %body
     =yield
