Centered artist tile content

--- a/app/views/application/_artist.html.haml
+++ b/app/views/application/_artist.html.haml
@@ -1,4 +1,4 @@
-.col-md-4
+.col-md-4.col-sm-6
   .artist-tile
     =image_tag('artists/'+uid+'.jpg', class: 'img-responsive')
     -# .overlay.img-responsive
