--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -89,8 +89,7 @@
 
 .artist-tile {
   position: relative;
-  margin: 8px auto;
-  display: inline-block;
+  margin: 15px auto;
   cursor: pointer;
   text-align: center;
 
@@ -107,6 +106,7 @@
   }
 
   img {
+    margin: 0 auto;
     width: 250px;
     height: auto;
     border-radius: 50%;
