--- a/app/views/static/index.html.haml
+++ b/app/views/static/index.html.haml
@@ -3,6 +3,7 @@
     .logo
       =image_tag 'icon.svg'
       encore.ai
+    -# http://devpost.com/software/encore-ai
     .col-xs-12
       %h1.title Music lives forever.
 
@@ -10,12 +11,12 @@
         .col-lg-8.col-lg-offset-2.col-md-10.col-md-offset-1
           %h3.subtitle Select an Artist
           .row
-            =render partial: 'artist', locals: {artist: 'Tupac', description: '', uid: 'tupac'}
-            =render partial: 'artist', locals: {artist: 'The Beatles', description: '', uid: 'the_beatles'}
-            =render partial: 'artist', locals: {artist: 'Kayne West', description: '', uid: 'kanye_west'}
-            =render partial: 'artist', locals: {artist: 'Taylor Swift', description: '', uid: 'taylor_swift'}
-            =render partial: 'artist', locals: {artist: 'Drake', description: '', uid: 'drake'}
-            =render partial: 'artist', locals: {artist: 'Other Artists', description: 'More Coming Soon!', uid: 'other_artist'}
+            =render partial: 'artist', locals: {artist: 'Tupac', description: 'Revive the legend.', uid: 'tupac'}
+            =render partial: 'artist', locals: {artist: 'The Beatles', description: '"You say goodbye, and I say hello"...', uid: 'the_beatles'}
+            =render partial: 'artist', locals: {artist: 'Kayne West', description: 'Peek into the mind of a Creative Genius.', uid: 'kanye_west'}
+            =render partial: 'artist', locals: {artist: 'Taylor Swift', description: 'Check TSwift\'s next hot track.', uid: 'taylor_swift'}
+            =render partial: 'artist', locals: {artist: 'Drake', description: 'Can\'t wait for more from the “last name greatest, first name ever?', uid: 'drake'}
+            =render partial: 'artist', locals: {artist: 'Other Artists', description: 'Coming Soon!', uid: 'other_artist'}
   .row
     .col-xs-12
       .loading-section
