Added nav bar with links to an about page and the github repo Increased lower bound on loading time

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -1,6 +1,6 @@
 .top-section {
   padding: 50px;
-  padding-top: 15px;
+  padding-top: 10px;
   box-shadow: 0px 3px 10px #999;
   color: white;
 
@@ -14,6 +14,26 @@
 
 .loading-section {
   display: none;
+}
+
+// Navbar styles
+.navbar-default {
+  background: none;
+  border: none;
+}
+
+.nav.navbar-nav.navbar-right li a {
+  color: white;
+  font-size: 15pt;
+}
+
+.navbar-header .navbar-brand {
+  color: white;
+  font-size: 20pt;
+}
+
+.navbar-header .navbar-brand:hover {
+  color: white;
 }
 
 .lyrics-section {
@@ -95,20 +115,14 @@
 }
 
 .logo {
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  width: 200px;
-  font-size: 20pt;
-
-  img {
-    width: 50px;
-    margin-right: 5px;
-  }
+  float: left;
+  width: 50px;
+  margin-right: 10px;
+  margin-top: -5px;
 }
 
 .title {
-  margin-top: 40px;
+  margin-top: 0px;
   margin-bottom: -5px;
   font-size: 50pt;
   text-align: center;
