--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,6 +2,8 @@
 %html
   %head
     %title encore.ai
+    %meta{name: "viewport", content: "width=device-width, initial-scale=1"}
+    =favicon_link_tag 'favicon.ico'
     =stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
     =javascript_include_tag 'application', 'data-turbolinks-track' => true
     =javascript_include_tag '//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js'
