--- a/app/views/static/index.html.haml
+++ b/app/views/static/index.html.haml
@@ -23,7 +23,7 @@
           .row
             =render partial: 'artist', locals: {artist: 'Tupac', description: 'Revive the legend.', uid: 'tupac'}
             =render partial: 'artist', locals: {artist: 'The Beatles', description: '"You say goodbye, and I say hello"...', uid: 'the_beatles'}
-            =render partial: 'artist', locals: {artist: 'Kayne West', description: 'Peek into the mind of a Creative Genius.', uid: 'kanye_west'}
+            =render partial: 'artist', locals: {artist: 'Kanye West', description: 'Peek into the mind of a Creative Genius.', uid: 'kanye_west'}
             =render partial: 'artist', locals: {artist: 'Taylor Swift', description: 'Check TSwift\'s next hot track.', uid: 'taylor_swift'}
             =render partial: 'artist', locals: {artist: 'Drake', description: 'Can\'t wait for more from the “last name greatest, first name ever?', uid: 'drake'}
             =render partial: 'artist', locals: {artist: 'Other Artists', description: 'Coming Soon!', uid: 'other_artist'}
