--- a/app/views/static/index.html.haml
+++ b/app/views/static/index.html.haml
@@ -2,6 +2,7 @@
   .row.top-section
     %nav.navbar.navbar-default.navbar-static-top
       .container
+        %a.announce{href: "https://news.developer.nvidia.com/ai-helps-create-rock-song-honoring-queen/", target: '_blank'} Checkout the Queen lyrics we generated for the Nvidia Keynote at NeurIPS 2018!
         .navbar-header
           %a.navbar-brand
             =image_tag 'icon.svg', class: 'logo'
@@ -9,11 +10,10 @@
         #navbar
           %ul.nav.navbar-nav.navbar-right
             %li
-              %a{href: "http://devpost.com/software/encore-ai", target: '_blank'} About
+              %a{href: "https://devpost.com/software/encore-ai", target: '_blank'} About
             %li
               %a{:href => "https://github.com/dyelax/encore.ai", target: '_blank'} Github
 
-    -# http://devpost.com/software/encore-ai
     .col-xs-12
       %h1.title Music lives forever.
 
